--- a/src/styles/populary.scss
+++ b/src/styles/populary.scss
@@ -23,7 +23,6 @@ html{
         
 
         .image {
-            
             img{
                 width: 600px;
                 height: 350px;
@@ -34,6 +33,7 @@ html{
 
         .info {
             padding: 0 3rem;
+            height: 350px;
             background-color: #c7d7e7;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
@@ -41,6 +41,7 @@ html{
 
             h3 {
                 font-size: 1.5rem;
+                padding-top: 20px;
                 font-weight: 700;
                 color: hsl(211, 75%, 12%);
                 
