--- a/src/styles/hometrending.scss
+++ b/src/styles/hometrending.scss
@@ -22,7 +22,12 @@
             img{
                 width: 600px;
                 height: 350px;
+                transition: all 0.3s ease-in;
                 border-radius: 10px;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
         }
 
@@ -54,6 +59,63 @@
                 font-size: 1.3rem;
                 font-weight: 700;
             }
+        }
+    }
+}
+
+@media screen {
+    @media (max-width: 992px ) {
+        .dish {
+            display: flex;
+            flex-direction: column;
+
+            .image{
+                img{
+                   margin: 0 100px;
+                }
+            }
+
+            .info{
+                h2{
+                    margin: 0 140px;
+                }
+
+                .method {
+                    margin: 0 1px;
+                }
+            }
+        }
+    }
+    @media (max-width: 1166px) {
+        .trend-container{
+            
+            .dish {
+                // height: 500px;
+                .image {
+                    img{
+                        
+                    }
+                }
+               
+
+                .info {
+                    width: 100%;
+                    h2 {
+                        display: flex;
+                        justify-content: center;
+                    }
+                    
+                    .method {
+                        margin-left: 70px;
+
+                    }
+                    p{
+                        display: flex;
+                        // height: 50px;
+                    }
+                }
+            }
+
         }
     }
 }
