--- a/src/styles/recipecard.scss
+++ b/src/styles/recipecard.scss
@@ -14,6 +14,8 @@
         background-color: rgba(204, 204, 204, 0.521);
         border-radius: 15px;
         text-decoration: none;
+
+        
         
         .image {
             img {
@@ -21,6 +23,11 @@
                 height: 220px;
                 border-top-left-radius: 15px;
                 border-top-right-radius: 15px;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    transform: scale(1.04);
+                }
             }
         }
     
@@ -44,6 +51,15 @@
                 color: rgb(160, 4, 4);
                 
             }
+        }
+    }
+}
+@media screen {
+    @media(max-width: 600px) {
+        .card-container{
+            display: grid;
+            grid-template-columns: auto;
+            margin:  0 20px;
         }
     }
 }
